--- a/libs/template/sharebar.jade
+++ b/libs/template/sharebar.jade
@@ -1,3 +1,5 @@
+// Sharebar icon set
+
 .title__subheading--footer
 	p Share this page. #[a(href="#") Find out more about sharing.]
 	a.a-social-whatsapp.show-mobile(href="javascript:window.location='whatsapp://send?text='+encodeURIComponent(location.href);") Whatsapp
