--- a/libs/template/sidebar-features.jade
+++ b/libs/template/sidebar-features.jade
@@ -1,3 +1,5 @@
+// Sidebar for features section of styleguide
+
 - var section = "Features"
 +sidebar([
     {href: "section-notice.html", title: "Section Notices"},
