--- a/libs/template/sidebar-navigation.jade
+++ b/libs/template/sidebar-navigation.jade
@@ -1,3 +1,5 @@
+// Sidebar for navigation section of styleguide
+
 - var section = "Navigation"
 +sidebar([
 	{href: "blocklinks.html", title: "Block links"},
