--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -1,3 +1,57 @@
+// Template for old website style mockups
+//
+// VARIABLES
+//
+// dir
+// The related reference for assets such as images and styles.
+//
+// title
+// The page title. If exists will show as the page title.
+//
+// cookiemonster
+// If true will show the cookiemonster banner at the bottom of the screen.
+//
+// mockup
+// If true will show the full megamenu.
+//
+// mockup > signedin
+// If true will show show "Sign out" in top right.
+//
+// blog
+// If true show the blog headers.
+//
+// sidebar
+// If true show the sidebar block.
+//
+// toolbar
+// If true show the toolbar above content.
+//
+// toolbar > sharebar
+// If true show the sharebar below content.
+//
+// newfoot
+// If true show the new footer. If false (or blank) show the old footer.
+//
+// BLOCKS
+//
+// head
+// A block for anything that should be just before the </head> tag.
+//
+// breadcrumbs
+// A block for including the breadcrumbs mixin.
+//
+// section-notice
+// A block for section notice content.
+//
+// content
+// The main content block.
+//
+// sidebar
+// A block for sidebar mixin/content.
+//
+// script
+// A block for placing html before the </body> tag.
+
 include mixins.jade
 block settings
 doctype html
