--- a/libs/template/toolbar-blog.jade
+++ b/libs/template/toolbar-blog.jade
@@ -1,3 +1,4 @@
+// Toolbar for the top of blog content pages
+
 .title__subheading
 	| #[a(href="#") Stephen Rehill] on January 18, 2016 in #[a(href="#") Research], #[a(href="#") Content]
-	//a.a-social-print(href="javascript:window.print();", data-track="Print") Print
