--- a/libs/template/toolbar.jade
+++ b/libs/template/toolbar.jade
@@ -1,3 +1,5 @@
+// Toolbar for the top of content pages
+
 .title__subheading
 	| This advice is for
 	button#showSimpleModal.btn-secondary.btn-small(type="button")
