--- a/libs/template/sidebar-blog-v1.jade
+++ b/libs/template/sidebar-blog-v1.jade
@@ -1,3 +1,5 @@
+// Sidebar for blog mockups
+
 - var section = "Brand"
     .side-nav-beta
         .well(style="background-color: #f2f8ff; border: 0px #dfdfdf solid;")
@@ -13,15 +15,15 @@
             ul
                 li
                     a(href="#") Making things simpler: Personal Independence Payment (PIP)
-                li 
+                li
                     a(href="#") Introducing… immigration advice
-                li 
+                li
                     a(href="#") How people look for things
-                li 
+                li
                     a(href="#") Casebook: An intro to what's been happening
-                li 
+                li
                     a(href="#") A present (kind of) from the digital team
-                li 
+                li
                     a(href="#") Your digital team needs you!
 
         .well(style="background-color: #fee4c3; border: 0px #dfdfdf solid;")
