--- a/libs/dev/energy-comparison.less
+++ b/libs/dev/energy-comparison.less
@@ -104,7 +104,7 @@
     }
 }
 
-.ca-energy_rating {
+.ca-energyrating_wide {
     display: block;
     width: 158px;
     padding: 8px;
@@ -127,6 +127,37 @@
         img {
             border: none;
             max-width: 80px;
+        }
+        .of {
+            color: @gray-3;
+        }
+    }
+}
+
+.ca-energyrating_tall {
+    display: block;
+    text-align: center;
+    width: 80px;
+    padding: 8px;
+    background-color: @white;
+    border: 2px solid @heritage-blue-lighter;
+    border-radius: .5rem;
+    font-size: 12px;
+    font-weight: bold;
+    color: @heritage-blue;
+    .logo {
+        display: block;
+        img {
+            border: none;
+            max-height: 46px;
+            vertical-align: bottom;
+        }
+    }
+    .text {
+        display: block;
+        img {
+            border: none;
+            max-width: 60px;
         }
         .of {
             color: @gray-3;
