dev: Changed test on energy rating badge

--- a/libs/jade/branding/energy-rating.jade
+++ b/libs/jade/branding/energy-rating.jade
@@ -28,7 +28,7 @@ block content
 						| 4.75 #[span.of out of 5]
 						br
 						img(src="#{dir}images/rating-50.svg")
-					| Performance rating
+					//| Performance rating
 				p
 				.ca-energyrating_tall
 					.logo
