--- a/libs/jade/dev/feedback/feedback-public.jade
+++ b/libs/jade/dev/feedback/feedback-public.jade
@@ -35,7 +35,7 @@ block feedback
 	#feedback-form
 		#feedback-content
 			.callout--alert If you need help with a problem now, #[a contact your nearest Citizens Advice], or the #[a Citizens Advice consumer helpline] on #[strong 03454 04 05 06].
-			p Don’t include any personal or financial information such as National Insurance number or credit card details in your entry.
+			p Don’t include any personal or financial information such as your national insurance number or credit card details in your entry.
 			.fieldset
 				label(for="wrong") What’s wrong with this page?
 				textarea#wrong
