--- a/libs/jade/dev/energy/comparison.jade
+++ b/libs/jade/dev/energy/comparison.jade
@@ -1,5 +1,5 @@
 block settings
-	- var title = "Energy supplier comparison"
+	- var title = "Compare energy suppliers’ customer service"
 	//- var sidebar = true
 	- var mockup = true
 	- var toolbars = true
@@ -7,21 +7,11 @@ block settings
 
 extends /template/template.jade
 
-block sidebar
-	- var section = "Energy"
-	+sidebar([
-		{href: "comparison-4.html", title: "Energy supplier comparison"},
-		{href: "comparison-details.html", title: "How we score values"},
-		{href: "#", title: "Compare energy prices"}
-	])
-
-block section-notice
-	aside.section-notice
-		h2.screenreader Notice
-		.section-notice__content
-			p
-				span.badge NEW
-				| This page is part of #[a(href="#") our new approach to digital advice].
+block breadcrumbs
+	+breadcrumbs([
+		{title: "Home", href: "#"},
+		{title: "Energy", href: "#"},
+		{title: title}])
 
 block script
 	script(src="#{dir}js/sorttable.js")
@@ -149,24 +139,34 @@ block content
 	.articleContent
 		.flex-row
 			.col-md-8
-				p Morbi porta justo sem, eget consequat purus porttitor nec. Pellentesque vitae euismod nulla, a commodo diam. Phasellus eget tincidunt nibh. Ut sem arcu, aliquam non lectus eu, faucibus viverra lacus. Vestibulum tellus turpis, sollicitudin quis efficitur id, convallis nec velit. Nulla facilisi. Cras id neque quis lacus placerat hendrerit. Etiam neque augue, eleifend sit amet fermentum at, faucibus vel odio. Morbi ac bibendum ante, ut rutrum ipsum. Ut vel finibus est.
-				p
-					button.btn.right-button-icon Compare energy prices
+				p Price isn’t the only thing to think about when choosing an energy supplier. It might be worth choosing a supplier that has good customer service - even if they’re a bit more expensive.
+
+				p We’ve given energy suppliers a star rating based on:
+
+				ul
+					li how many complaints were made about them to third parties, eg the Energy Ombudsman
+					li how easy it is to contact them
+					li how easy their bills are to understand
+					li how good suppliers are at switching
+
+				p If a supplier doesn’t have a star rating it means we don’t have enough information to rate them yet.
+
+				p There’s a separate tool for comparing #[a(href="https://energycompare.citizensadvice.org.uk/") energy prices].
 
 		h2 Overview
 		.flex-row
 			.col-md-8
-				p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla auctor dui semper, vulputate magna ut, suscipit eros. Nunc non nunc nec ligula consequat aliquet non eu elit.
+				p Click on a supplier’s name to see a breakdown of their score, their contact details and information about billing.
 		table.sortable.energy-comparison
 			thead
 				tr
 					th.col-rank.sorttable_numeric(scope="col") Rank
 					th.col-supp(scope="col") Supplier
 					th.lg-only(scope="col") Complaints
-					th.lg-only(scope="col") Customer service
-					th.lg-only(scope="col") Billing satisfaction
+					th.lg-only(scope="col") Ease of contact
+					th.lg-only(scope="col") Bill clarity
 					th.lg-only(scope="col") Switching
-					th.lg-only(scope="col") Customer commitment
+					th.lg-only(scope="col") Customer guarantees
 					th.col-rate(scope="col") Rating of 5
 			tbody
 				tr.open-dialog1
@@ -470,11 +470,13 @@ block content
 					td Supplier AQ
 					td(colspan="6") Click to see more supplier information
 
-		h2 Methodology
 		.flex-row
 			.col-md-8
-				p Morbi porta justo sem, eget consequat purus porttitor nec. Pellentesque vitae euismod nulla, a commodo diam. Phasellus eget tincidunt nibh. Ut sem arcu, aliquam non lectus eu, faucibus viverra lacus.
-				a.blocklink(href="comparison-details.html") How we score values
+				p There are currently 17 suppliers with a star rating - ranked in order of how good their customer service is.
+
+				a.blocklink(href="comparison-details.html") Find out how the scores are worked out
+
+				p We don’t have enough information to rate all the suppliers listed on this page. We’ll rate them when that information becomes available.
 
 		#overlay1.overlay(style="display:none")
 			.dialog(role="alertdialog" aria-labelledby="dialog-1-label" aria-describedby="dialog-1-main" tabindex="-1" style="z-index: 3;")
@@ -492,27 +494,27 @@ block content
 								td.rating(width="20%")
 									span 5
 							tr
-								th(scope="row") Customers satisfied with service
+								th(scope="row") Customers who found contacting suppliers easy
 								td 57.89
 								td.rating
 									span 2
 							tr
-								th(scope="row") Customers satisfied with billing
+								th(scope="row") Customers who found bills easy to understand
 								td 53.78
 								td.rating
 									span 5
 							tr
-								th(scope="row") Proportion of switches in 21 days
+								th(scope="row") Switches done in 21 days
 								td 80.94%
 								td.rating
 									span 3
 							tr
-								th(scope="row") Customer commitment
+								th(scope="row") Customer guarantees
 								td Signed to switching guarantee#[br]Not signed to billing code
 								td.rating
 									span 4
-					a.blocklink(href="comparison-details.html") How we score values
-					h3 Contact
+					a.blocklink(href="comparison-details.html") How the scores are worked out
+					h3 Contact information
 					p
 						| #[strong Telephone:] 0800 0480202
 						br
@@ -540,7 +542,7 @@ block content
 						| #[strong Saturday:] 8am - 8pm
 						br
 						| #[strong Sunday:] Closed
-					h3 Frequency of billing
+					h3 Billing information
 					p
 						| #[strong Annually:] Direct debit
 						br
@@ -570,8 +572,8 @@ block content
 								td(width="40%") 40.6
 								td.rating(width="20%")
 									span 3
-					a.blocklink(href="comparison-details.html") How we score values
-					h3 Contact
+					a.blocklink(href="comparison-details.html") How the scores are worked out
+					h3 Contact information
 					p
 						| #[strong Telephone:] 0800 0480202
 						br
@@ -599,7 +601,7 @@ block content
 						| #[strong Saturday:] 8am - 8pm
 						br
 						| #[strong Sunday:] Closed
-					h3 Frequency of billing
+					h3 Billing information
 					p
 						| #[strong Annually:] Direct debit
 						br
@@ -622,7 +624,7 @@ block content
 					button.dialog__close.3(type="button" data-action="close")<i aria-hidden="true" class="dialog__close-icon"></i><span class="dialog__close-text">Close</span>
 
 				.dialog__main#dialog-1-main
-					h3 Contact
+					h3 Contact information
 					p
 						| #[strong Telephone:] 0800 0480202
 						br
@@ -650,7 +652,7 @@ block content
 						| #[strong Saturday:] 8am - 8pm
 						br
 						| #[strong Sunday:] Closed
-					h3 Frequency of billing
+					h3 Billing information
 					p
 						| #[strong Annually:] Direct debit
 						br
