dev:change: Adding real content to energy comparison

--- a/libs/jade/dev/energy/comparison-details.jade
+++ b/libs/jade/dev/energy/comparison-details.jade
@@ -121,7 +121,7 @@ block content
         p You can see how this works in the example.
 
         h2 Example
-        h3 UK Energy Supplier plc
+        h3 UK Energy Supplier plc - star rating 4.5
 
         table
             thead
@@ -132,7 +132,6 @@ block content
                     th(scope="col") Billing clarity
                     th(scope="col") Switching
                     th(scope="col") Customer guarantees
-                    th(scope="col") Star rating
             tbody
                 tr
                     th(scope="row") Number
@@ -141,7 +140,6 @@ block content
                     td 74%
                     td 99%
                     td yes
-                    td(rowspan="3") 4.5
                 tr
                     th(scope="row") Score out of 5
                     td 5
