--- a/libs/jade/dev/energy/comparison.jade
+++ b/libs/jade/dev/energy/comparison.jade
@@ -141,19 +141,20 @@ block content
 			.col-md-8
 				p Price isn’t the only thing to think about when choosing an energy supplier. It might be worth choosing a supplier that has good customer service - even if they’re a bit more expensive.
 
-				p We’ve given energy suppliers a star rating based on:
+				p To help you compare customer service, we’ve given energy suppliers a star rating based on:
 
 				ul
-					li how many complaints were made about them to third parties, eg the Energy Ombudsman
+					li how many complaints were made about them to third parties
 					li how easy it is to contact them
 					li how easy their bills are to understand
 					li how good suppliers are at switching
 
-				p If a supplier doesn’t have a star rating it means we don’t have enough information to rate them yet.
+				.callout--alert
+					p If a supplier doesn’t have a star rating it means we don’t have enough information to rate them yet.
 
 				p There’s a separate tool for comparing #[a(href="https://energycompare.citizensadvice.org.uk/") energy prices].
 
-		h2 Overview
+		h2 Rating
 		.flex-row
 			.col-md-8
 				p Click on a supplier’s name to see a breakdown of their score, their contact details and information about billing.
@@ -177,7 +178,7 @@ block content
 					td.service 57.89%
 					td.billing 53.78%
 					td.switching 80.94%
-					td.commitment 4
+					td.commitment 3
 					//td.rating 3
 					td.rating 4.5
 				tr.open-dialog1
@@ -188,7 +189,7 @@ block content
 					td.service 67.89%
 					td.billing 56.8%
 					td.switching 100%
-					td.commitment 4
+					td.commitment 3
 					//td.rating 3.25
 					td.rating 4
 				tr.open-dialog1
@@ -199,7 +200,7 @@ block content
 					td.service 92.67%
 					td.billing 82.34%
 					td.switching 74.68%
-					td.commitment 5
+					td.commitment 3
 					//td.rating 4
 					td.rating 3
 				tr.open-dialog1
@@ -221,7 +222,7 @@ block content
 					td.service 54.67%
 					td.billing 74.67%
 					td.switching 100%
-					td.commitment 4
+					td.commitment 3
 					//td.rating 3.5
 					td.rating 1
 				tr.open-dialog1
@@ -232,7 +233,7 @@ block content
 					td.service 62.2%
 					td.billing 45.67%
 					td.switching 60.54%
-					td.commitment 5
+					td.commitment 3
 					td.rating 2.25
 				tr.open-dialog1
 					td.decrease
@@ -252,7 +253,7 @@ block content
 					td.service 51.23%
 					td.billing 45.67%
 					td.switching 77.56%
-					td.commitment 4
+					td.commitment 3
 					td.rating 2.75
 				tr.open-dialog1
 					td.decrease
@@ -282,7 +283,7 @@ block content
 					td.service 53.3%
 					td.billing 61.5%
 					td.switching 96.34%
-					td.commitment 4
+					td.commitment 3
 					td.rating 3.25
 				tr.open-dialog1
 					td.increase
@@ -292,7 +293,7 @@ block content
 					td.service 76.44%
 					td.billing 25.67%
 					td.switching 54.23%
-					td.commitment 4
+					td.commitment 3
 					td.rating 3.5
 				tr.open-dialog1
 					td.decrease
@@ -322,7 +323,7 @@ block content
 					td.service 42.38%
 					td.billing 80.67%
 					td.switching 82.34%
-					td.commitment 4
+					td.commitment 3
 					td.rating 2.75
 				tr.open-dialog1
 					td.increase
@@ -360,7 +361,7 @@ block content
 					td.service -
 					td.billing -
 					td.switching -
-					td.commitment 4
+					td.commitment 3
 					td -
 				tr.open-dialog2
 					td(sorttable_customkey="99") -
@@ -387,7 +388,7 @@ block content
 					td.service -
 					td.billing -
 					td.switching -
-					td.commitment 5
+					td.commitment 3
 					td -
 				tr.open-dialog3
 					td(sorttable_customkey="100") -
@@ -544,17 +545,17 @@ block content
 						| #[strong Sunday:] Closed
 					h3 Billing information
 					p
-						| #[strong Annually:] Direct debit
+						| #[strong Every year:] direct debit
 						br
-						| #[strong Bi-annually:] Direct debit
+						| #[strong Every 6 months:] direct debit
 						br
-						| #[strong Quarterly:] Direct debit
+						| #[strong Quarterly:] direct debit
 						br
-						| #[strong Monthly:] Direct debit
+						| #[strong Monthly:] direct debit
 						br
-						| #[strong Weekly:] Cash or cheque
+						| #[strong Weekly:] cash or cheque
 						br
-						| #[strong Other:] Cash or cheque
+						| #[strong Other:] cash or cheque
 
 
 		#overlay2.overlay(style="display:none")
@@ -603,17 +604,17 @@ block content
 						| #[strong Sunday:] Closed
 					h3 Billing information
 					p
-						| #[strong Annually:] Direct debit
+						| #[strong Every year:] direct debit
 						br
-						| #[strong Bi-annually:] Direct debit
+						| #[strong Every 6 months:] direct debit
 						br
-						| #[strong Quarterly:] Direct debit
+						| #[strong Quarterly:] direct debit
 						br
-						| #[strong Monthly:] Direct debit
+						| #[strong Monthly:] direct debit
 						br
-						| #[strong Weekly:] Cash or cheque
+						| #[strong Weekly:] cash or cheque
 						br
-						| #[strong Other:] Cash or cheque
+						| #[strong Other:] cash or cheque
 
 
 		#overlay3.overlay(style="display:none")
@@ -654,14 +655,14 @@ block content
 						| #[strong Sunday:] Closed
 					h3 Billing information
 					p
-						| #[strong Annually:] Direct debit
+						| #[strong Every year:] direct debit
 						br
-						| #[strong Bi-annually:] Direct debit
+						| #[strong Every 6 months:] direct debit
 						br
-						| #[strong Quarterly:] Direct debit
+						| #[strong Quarterly:] direct debit
 						br
-						| #[strong Monthly:] Direct debit
+						| #[strong Monthly:] direct debit
 						br
-						| #[strong Weekly:] Cash or cheque
+						| #[strong Weekly:] cash or cheque
 						br
-						| #[strong Other:] Cash or cheque
+						| #[strong Other:] cash or cheque
