dev:add: Added feedback link to footer of enegry tool

--- a/libs/jade/dev/energy/comparison-details.jade
+++ b/libs/jade/dev/energy/comparison-details.jade
@@ -4,6 +4,7 @@ block settings
     - var toolbars = true
     - var mockup = true
     - var dir = "../../"
+    - var energyfeedback = true
 
 block sidebar
     - var section = "Energy"
