--- a/libs/jade/dev/energy/comparison.jade
+++ b/libs/jade/dev/energy/comparison.jade
@@ -4,6 +4,7 @@ block settings
 	- var mockup = true
 	- var toolbars = true
 	- var dir = "../../"
+	- var energyfeedback = true
 
 extends /template/template.jade
 
